# TemplateRepoCxx

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  format_count.sh
example/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt
